# House_Rental

./: Makefile  README.md  SetYouUp.ipynb  pyproject.toml  requirements.txt
house_rental/: __init__.py  dataset.py  features.py  plots.py
notebooks/: Main.ipynb
