[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "house_rental"
version = "0.0.1"
description = "This repository contains a comprehensive data science project focused on predicting rental prices for residential properties. It includes data exploration, feature engineering, model development, and evaluation using Python and Jupyter Notebooks. The workflow demonstrates best practices in data cleaning, feature selection, and performance assessment with real-world rental datasets."
authors = [
  { name = "Agam Singh Saini" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
    "numpy (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "nbformat (>=4.2.1)",
]
requires-python = ">=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["house_rental"]
force_sort_within_sections = true


